--- a/README
+++ b/README
@@ -1,4 +1,18 @@
-SYNAESTHESIA v1.1
+SYNAESTHESIA for Windows
+
+This is the first public release of the Windows version of
+Synaesthesia, ported from Linux by Nils Desle.
+
+For further notes, see the file "Windows addendum.txt".
+
+Send comments or queries to me (pfh@yoyo.cc.monash.edu.au) or Nils
+(nils.desle@cegeka.be)
+
+Due to circumstances beyond my control I haven't been able to merge
+this version with the Linux version yet. Expect a combined Linux,
+Windows and FreeBSD version within a few months.
+
+Below is the original Linux README.
 
 Introduction
 ============
@@ -17,20 +31,63 @@ display. Some of the shapes I have observed are:
 Surround sound decoding has been added in version 1.1. Ambient noise is
 shown in orange.
 
+X-Windows support has been added in version 1.3, as well as a major redesign
+of the interface. The intention is to make Synaesthesia a fully functional
+CD player, suitable for use while working.
+
+Version 1.4 adds support for play lists and viewing recorded samples.
+Support for the Simple DirectMedia Layer library has also been added
+(http://www.devolution.com/~slouken/SDL) in preperation for a Windoze port
+and partly just because its a great graphics library.
+
 Usage
 =====
 
-Run Synaesthesia with no parameters for information on how to use it.
+Synaesthesia should compile on Linux systems.  Compile 
+Synaesthesia by typing "make" then following the instructions displayed.
+
+You will need to run Synaesthesia as root if you compiled it with
+svgalib. Other varieties can be run by any user providing you provide 
+permissions on /dev/dsp, /dev/cdrom, and /dev/mixer.
+
+Synaesthesia creates a configuration file you can edit, named
+~/.synaesthesia.  You can edit this to set the default brightness,
+volume and X-Window position and size.
+
+Run Synaesthesia with no parameters for further information on how to 
+use it.
 
 
+Authors
+=======
 
 This program is free. If you like it, or have any suggestions, please
-send me (Paul Harrison) an email (phar6@student.monash.edu.au).
+send me (Paul Harrison) an email (pfh@yoyo.cc.monash.edu.au).
 
+Thanks to Asger Alstrup Nielsen for many great suggestions, and for 
+writing optimized 32 bit loops for fading and drawing to screen.
+
+Thanks to Roger Knobbe for porting Synaesthesia to FreeBSD. (untested)
+
+Thanks to Ben Gertzfield and Martin Mitchell for some small fixes to the
+CD controlling code. 
+
+Thanks to Simon Budig for an improvement to the X code.
+
+Many thanks to Nils Desle for porting it to Windows, and in so doing
+braving the torture that is the Windows API.
 
 Changes
 =======
 
-1.1 - Added surround sound decoding
-1.2 - Fixed a bug in the ioctl calls to /dev/dsp
+1.1 - Added surround sound decoding.
+1.2 - Fixed a bug in the ioctl calls to /dev/dsp.
+1.3 - Asger Alstrup Nielsen's optimizations added.
+      Added X-Windows support.
+      More options, redesigned interface.
+1.4 - Bug fixes, including a great reduction in
+      "Sound: Recording overrun" warnings.
+      New command line options: play lists and piping.
+      Support for SDL.
+1.5 - SDL Support
 
