--- a/README
+++ b/README
@@ -1,58 +1,104 @@
-SYNAESTHESIA v1.6
+SYNAESTHESIA v2.0
 
 Introduction
 ============
 
-This is a program for representing sounds visually (from a CD or line
-input). It goes beyond the usual oscilliscope style program by combining
-an FFT and stereo positioning information to give a two dimensional
-display. Some of the shapes I have observed are:
+This is a program for representing sounds visually from a CD or line
+input or piped from another program. It goes beyond the usual oscilliscope
+style program by combining an FFT and stereo positioning information to
+give a two dimensional display. Some of the shapes I have observed are:
   * Drums: clouds of color, fairly high
   * Clean guitar: several horizontal lines, low down
   * Rough guitar: a cloud, low down
   * Trumpet: Lots of horizontal lines everywhere
   * Flute: A single horizontal line, low down
   * Voice: A vertical line with some internal structure
+  * Synthesizer: All kinds of weird shapes!
 
-Surround sound decoding has been added in version 1.1. Ambient noise is
-shown in orange.
+Synaesthesia can run in a window in X or full screen using SVGAlib.
 
-X-Windows support has been added in version 1.3, as well as a major redesign
-of the interface. The intention is to make Synaesthesia a fully functional
+The display represents frequency as vertical position on screen, 
+left-right position as left-right position on screen. It can also
+understand surround sound encoded music, and shows ambient noise 
+in orange.
+
+X-Windows support was added in version 1.3, as well as a major redesign
+of the interface. You can use Synaesthesia as a fully functional
 CD player, suitable for use while working.
 
-Version 1.4 adds support for play lists and viewing recorded samples.
-Support for the Simple DirectMedia Layer library has also been added.
-(http://www.devolution.com/~slouken/SDL) 
-
-Version 1.6 adds support for FreeBSD, as well as better keyboard support.
+There is command line support for play lists and piping from another
+program (such as an mp3 player).
 
 Usage
 =====
 
-Synaesthesia should compile on Linux and FreeBSD systems. There is also
-a Windows version, available from 
- http://yoyo.cc.monash.edu.au/~pfh/synaesthesia.html 
- 
-Compile Synaesthesia by typing "make" then following the instructions 
-displayed.
+Synaesthesia should work on Linux and BSD systems. (Note: I don't
+have access to a BSD system myself, I have to rely on patches -- if it
+doesn't work, please tell me!) LinuxPPC users may have to use the pipe
+mode rather than taking sound input from the CD player, as I believe
+sound recording is not yet implemented.
 
-You will need to run Synaesthesia as root if you compiled it with
-svgalib. Other varieties can be run by any user providing you provide 
-permissions on /dev/dsp, /dev/cdrom, and /dev/mixer.
+Compile Synaesthesia by typing
 
-Synaesthesia creates a configuration file you can edit, named
-~/.synaesthesia.  You can edit this to set the device names of your sound
-card and CD-ROM drive, default brightness, volume and X-Window position 
-and size.
+  make
+  
+then install it by typing
 
-Note to FreeBSD users: You will have to edit ~/.synaesthesia to set the
-appropriate device name for your CD-ROM drive (run the program with no
-parameters first in order to create this file).
+  make install
+
+This will create three versions of Synaesthesia:
+
+  synaesthesia    - full screen SVGAlib version (Linux only)
+  xsynaesthesia   - Version that runs as a window in X
+  sdlsynaesthesia - Version that uses the SDL graphics library
+
+If you want to use the SDL version, you need to get SDL from
+http://www.devolution.com/~slouken/SDL.
+
+You will need to run Synaesthesia as root to run it full screen
+with SVGAlib. Other varieties can be run by any user providing you 
+provide permissions on /dev/dsp, /dev/cdrom, and /dev/mixer.
+
+Synaesthesia creates a configuration file, named ~/.synaesthesia,
+to store settings such as brightness, color, and window size, as
+well as which devices to use to control sound input.
+
+BSD users will have to edit this file to set the CD-ROM device name
+before using Synaesthesia in order to control the CD.
 
 Run Synaesthesia with no parameters for further information on how to 
 use it.
 
+Notes for code rippers
+======================
+
+This program contains code that you may wish to use in your own projects.
+If you want to, please do. (For example, you might want to add some
+snazzy visual effects to your favourite MP3 or CD player)
+
+The actual code to do the mapping from sound to visual display is
+all in core.cpp, it should be fairly easy to disentangle from other
+parts of the program. It does make reference to some globals defined
+in syna.h, namely the #defines m (log2 of the sample size for each
+frame) and brightness, data (which stores the sound input), outputBmp,
+lastOutputBmp and lastLastOutputBmp (which hold the output), outWidth
+and outHeight (size of the bitmaps), and fadeMode, brightnessTwiddler,
+starSize and pointsAreDiamonds (various parameters affecting the display).
+
+The normal way to use it would be:
+
+  Call coreInit() to set up some look-up tables
+  Call setStarSize(starSize) to set up some more look-up tables
+  Loop
+    Put data into the data array
+    Call fade() to apply the fade/wave/heat effect to the output
+    Call coreGo() to add the next fragment of sound input to the output
+    Display contents of outputBmp to screen
+
+There is a simple anti-aliased polygon drawing engine in the file
+polygon.h. sound.cpp contains code for driving the CD. xlib.c and
+xlibwrap.cpp contain code for setting up a window under X (originally
+ripped from the Xaos fractal viewer program :-) ).
 
 Authors
 =======
@@ -63,12 +109,12 @@ send me (Paul Harrison) an email (pfh@yoyo.cc.monash.edu.au).
 Thanks to Asger Alstrup Nielsen for many great suggestions, and for 
 writing optimized 32 bit loops for fading and drawing to screen.
 
+Thanks to Roger Knobbe for porting Synaesthesia to FreeBSD. 
+
 Thanks to Ben Gertzfield and Martin Mitchell for some small fixes to the
 CD controlling code. 
 
 Thanks to Simon Budig for an improvement to the X code.
-
-Many thanks to Sebestyen Zoltan for the FreeBSD port.
 
 Changes
 =======
@@ -82,5 +128,10 @@ Changes
       "Sound: Recording overrun" warnings.
       New command line options: play lists and piping.
       Support for SDL.
-1.5 - Support for new SDL.
-1.6 - Support for keyboard, FreeBSD
+2.0 - Bug fixes: Fixed problem in xlib.c that caused occasional segfaults,
+        several endianness problems fixed.
+      New effects: Wave, heat, diamond shaped points.
+      Piping sound now longer requires the twiddle factor.
+      Yet another interface redesign.
+      Partial support for LinuxPPC (pipe mode only)
+
